--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-native-firebase/app": "^20.0.0",
     "@react-native-firebase/messaging": "^20.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-permissions": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
