--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@notifee/react-native": "^7.8.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-native-firebase/app": "^20.0.0",
     "@react-native-firebase/messaging": "^20.0.0",
     "react": "18.2.0",
